@@ -18,6 +18,8 @@ ubiquity (2.1.33) UNRELEASED; urgency=low
   * Only try to set the focus on the next button when we've handed over
     control to the user.  Prior to this the quit button was getting the
     focus because the next button was insensitive.
+  * Use translatable strings for the keyboard query widget
+    (LP: #533859).
 
   [ Mario Limonciello ]
   * Fix wrong page to jump back to when partitioning fails during install.
